--- a/recipe.html
+++ b/recipe.html
@@ -11,7 +11,7 @@
 
   <h2>Brought to you by <a href="https://cooking.nytimes.com/recipes/1022733-creamy-baked-macaroni-and-cheese">New York Times Cooking</a></h2>
 
-  <p class="byline"><a href="https://cooking.nytimes.com/ourcooks/eric-kim/my-recipes">By Eric Kim</a></p>
+  <p class="byline">By <a href="https://cooking.nytimes.com/ourcooks/eric-kim/my-recipes">Eric Kim</a></p>
 
   <dl>
     <dt>Time:</dt>
@@ -61,7 +61,7 @@
       <li>Transfer to a 9-by-13-inch baking pan or dish and bake until bubbling at the edges, 15 to 20 minutes. Serve immediately.</li>
     </ol>
   </section>
-  
+
   <section>
     <h3>Nutritional Information</h3>
 
