--- a/recipe.html
+++ b/recipe.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Creamy Baked Macaroni and Cheese</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <article>
+  <div id="head-section">
   <h1>Creamy Baked Macaroni and Cheese</h1>
 
   <h2>Brought to you by <a href="https://cooking.nytimes.com/recipes/1022733-creamy-baked-macaroni-and-cheese">New York Times Cooking</a></h2>
@@ -21,8 +24,8 @@
     <dt>Rating:</dt>
     <dd>4 out of 5</dd>
   </dl>
-
-  <figure>
+  </div>
+  <figure id="main-recipe-photo">
     <img src="nyt_mac_cheese.jpg" alt="Creamy Baked Mac and Cheese">
     <figcaption>Photo and food styling by Christopher Testani
     </figcaption>
@@ -62,7 +65,7 @@
     </ol>
   </section>
 
-  <section>
+  <section id="nutrition">
     <h3>Nutritional Information</h3>
 
     <ul>
